gccida/g1/set_target_switch
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4829:7: error: unknown type name '$258AECD3FC566EB195B4BBD0B1CA287A'
const $258AECD3FC566EB195B4BBD0B1CA287A *v1; // rbp 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4832:7: error: unknown type name '$1D571F2FE86DE6D03AA3EA39F18D92F2'
const $1D571F2FE86DE6D03AA3EA39F18D92F2 *v4; // r13 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4851:23: error: unknown type name '$258AECD3FC566EB195B4BBD0B1CA287A'
while ( v1 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4851:59: error: expected ')'
while ( v1 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4851:7: note: to match this '('
while ( v1 != ( const $258AECD3FC566EB195B4BBD0B1CA287A *)documented_lang_options ); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/toplev.c:4866:10: error: use of undeclared identifier 'unk_6F4758'
while ( &unk_6F4758 != ( _UNKNOWN *)v4 ); 
         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_target_switch/src/obj/toplev.o] Error 1
